@@ -2266,6 +2266,15 @@ rb_run_exec_options_err(const struct rb_exec_arg *e, struct rb_exec_arg *s, char
             return -1;
         }
     }
+    else {
+#if USE_OPENAT
+        if (fchdir(GET_THREAD()->cwd.fd) == -1)
+            return -1;
+#else
+        if (chdir(GET_THREAD()->cwd.path) == -1)
+            return -1;
+#endif
+    }
 
     obj = rb_ary_entry(options, EXEC_OPTION_UMASK);
     if (!NIL_P(obj)) {
